--- a/src/styles/components/_canvas.scss
+++ b/src/styles/components/_canvas.scss
@@ -1,5 +1,5 @@
 .canvas {
-    background-color: var(--white);
-    border-right: 7px solid var(--dark);
-    border-bottom: 7px solid var(--dark);
+    background-color: $white;
+    border-right: $border solid $dark;
+    border-bottom: $border solid $dark;
 }
