add: shape acoordeon

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,4 @@
 @import "./components/sidebar";
 @import "./components/blackboard";
 @import "./components/canvas";
+@import "./components/shapeList";
