Add: fill button

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -43,6 +43,7 @@
         align-items: center;
         background: $white;
         border: 0;
+        border: 2px solid $dark;
         cursor: pointer;
 
 
