--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import "./components/blackboard";
 @import "./components/canvas";
 @import "./components/shapeList";
+@import "./components/actionButton";
