--- a/src/styles/components/_actionButton.scss
+++ b/src/styles/components/_actionButton.scss
@@ -1,4 +1,5 @@
 .action-button {
+    margin-bottom: .5rem;
     display: flex;
     align-items: center;
     width: calc(100% - 2rem);
@@ -6,6 +7,7 @@
     background-color: $white;
     border: 2px solid $dark;
     border-radius: 5px;
+    cursor: pointer;
 
     &__img {
         margin-right: .5rem;
@@ -13,5 +15,9 @@
 
     &__text {
         margin: 0;
+    }
+
+    &:hover {
+        background-color: darken($white, $amount: 10%);
     }
 }
