--- a/src/styles/components/_shapeList.scss
+++ b/src/styles/components/_shapeList.scss
@@ -1,11 +1,12 @@
 .shape-list {
-    background-color: $danger;
+    background-color: $primary;
+    width: 90%;
 
     &__button {
+        width: 100%;
         height: 1.5rem;
         display: flex;
         align-items: center;
-        width: 100%;
         background-color: $secondary;
         border: 2px solid $dark;
     }
@@ -22,23 +23,33 @@
 
     &__options {
         max-height: 0;
-        background-color: $danger;
+        background-color: $primary;
         transform: scaleY(0);
         transform-origin: top;
         transition: transform .3s ease, max-height .3s ease;
         overflow-y: auto;
-
         display: flex;
+        border-right: 2px solid $dark;
+        border-left: 2px solid $dark;
         flex-direction: column;
         align-items: center;
 
 
+        &-title{
+            font-weight: bold;
+            margin: .3rem 0 ;
+        }
 
         &--open {
-            max-height: 7rem;
-            padding: .5rem 0;
+            max-height: 7.5rem;
+            padding: 0 0 .5rem 0;
             position: relative;
             transform: scaleY(1);
+        }
+
+        &:last-of-type{
+            background: $white;
+            border-bottom: 2px solid $dark;
         }
     }
 }
