add: fill shapes

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -63,6 +63,11 @@
         &--active {
             background-color: $warning;
         }
+
+        &:disabled {
+            cursor: initial;
+            background-color: #aaa;
+        }
     }
 
     &__color {
