--- a/src/styles/config/_reset.scss
+++ b/src/styles/config/_reset.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+
 *,
 *::after,
 *::before {
@@ -9,6 +11,5 @@ body {
 }
 
 html {
-    font-family: system-ui;
-
+    font-family: 'Josefin Sans', sans-serif;
 }
