fix: move elements

--- a/src/styles/components/_actionButton.scss
+++ b/src/styles/components/_actionButton.scss
@@ -20,4 +20,8 @@
     &:hover {
         background-color: darken($white, $amount: 10%);
     }
+
+    &--active {
+        background-color: $warning;
+    }
 }
