--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -37,6 +37,7 @@
 
         &--color {
             margin-left: 1rem;
+            width: 28rem;
             max-width: 50rem;
             display: flex;
             flex-direction: column;
