--- a/src/styles/components/_actionButton.scss
+++ b/src/styles/components/_actionButton.scss
@@ -18,7 +18,7 @@
     }
 
     &:hover {
-        background-color: darken($white, $amount: 30%);
+        background-color: $focus;
     }
 
     &--active {
