--- a/src/styles/config/_vars.scss
+++ b/src/styles/config/_vars.scss
@@ -1,8 +1,8 @@
 $white: #FDFFFC;
-$primary: #A0C4FF;
-$secondary: #2ec4b6;
+$primary: #124258;
+$secondary: #237F83;
 $dark: #011627;
-$danger: #E71D36;
+$danger: #F0452E;
 $warning: #FF9F1C;
-
+$focus: #29C0B2;
 $border: 7px;
