--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     &__title{
-        margin: 0;
+        margin: .3rem 0 0 0;
         padding: .4rem 0;
         font-size: 1.2rem;
         text-align: center;
